More code cleanup and bug fix: controller and server